update statistic function and add menus for the other controllers